--- a/about_me.html
+++ b/about_me.html
@@ -109,10 +109,10 @@
     
     <div class="nav">
     	<ul>
- 			<li><a href="#home">Home</a></li>
-            <li><a href="#about_me">About Me</a></li>
-            <li><a href="#research">Research</a></li>
-            <li><a href="#ohotography">Photography</a></li>
+ 			<li><a href="/index.html">Home</a></li>
+            <li><a href="/about_me.html">About Me</a></li>
+            <li><a href="/research.html">Research</a></li>
+            <li><a href="/photography.html">Photography</a></li>
 		</ul>
 	</div>
     
