--- a/photography.html
+++ b/photography.html
@@ -122,8 +122,8 @@
     
 	<table>
     	<tr>
-        	<th><img src="/images/IMG_6995.jpg" alt="Fox Squirrel"></th>
-        	<th><img src="/images/IMG_9530.jpg" alt="Swinhoe’s White-eye"></th>
+        	<th><img src="/images/IMG_6995.JPG" alt="Fox Squirrel"></th>
+        	<th><img src="/images/IMG_9530.JPG" alt="Swinhoe’s White-eye"></th>
         </tr>
     </table>
     
