--- a/photography.html
+++ b/photography.html
@@ -130,12 +130,12 @@
 
   <div class="w3-third">
     <img src="/images/IMG_6995.JPG" style="width:100%">
-    <img src="/images/IMG_6564.JPG.jpg" style="width:100%">
+    <img src="/images/IMG_6564.JPG" style="width:100%">
   </div>
 
   <div class="w3-third">
     <img src="/images/IMG_7185.JPG" style="width:100%">
-    <img src="/images/IMG_2820.JPG.jpg" style="width:100%">
+    <img src="/images/IMG_2820.JPG" style="width:100%">
   </div>
 </div>
     
