--- a/photography.html
+++ b/photography.html
@@ -121,6 +121,8 @@
 		</ul>
 	</div>
     
+	<h3>Here are some of my favorite shots.</h3>
+	
 <div class="w3-row" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
     <img src="/images/IMG_9530.JPG" style="width:100%">
