--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="">
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	
    
 </head>
