--- a/research.html
+++ b/research.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="">
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
+<link rel="stylesheet" href="theme.css">
 	
 </head>
 
