--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 	<h1>Sheila Chan</h1>
     <h2>Reseach & Photography</h2>
     
+<div class="nav">
+    	<ul>
+ 			<li><a href="/index.html">Home</a></li>
+            <li><a href="/about_me.html">About Me</a></li>
+            <li><a href="/research.html">Research</a></li>
+            <li><a href="/photography.html">Photography</a></li>
+		</ul>
+	</div>
+
     <div class="row">
   <div class="column">
     <img src="/images/IMG_7185_cover.JPG"
