--- a/index.html
+++ b/index.html
@@ -30,16 +30,11 @@
             <li><a href="/photography.html">Photography</a></li>
 		</ul>
 	</div>
-
-    <div class="row">
-  <div class="column">
-    <img src="/images/IMG_7185_cover.JPG"
-  </div>
+<img src="/images/IMG_7185_cover.JPG style="width: 50%; float: left;>
   
-  <div class="column">
-   <img src="/images/profile_pic.png">
-   <p> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p>
-  </div>
+  <img src="/images/profile_pic.png style="float: right;>
+  
+  <p> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p>
     
     <footer>&copy; 2021 Sheila Shu-Laam Chan</footer>
     
