--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <li><a href="/photography.html">Photography</a></li>
 		</ul>
 	</div>
-<img src="/images/IMG_7185_cover.JPG style="width: 50%; float: left;>
+<img src="/images/IMG_7185_cover.JPG" style="float: left;">
   
-  <img src="/images/profile_pic.png style="float: right;>
+  <img src="/images/profile_pic.png" style="float: right;">
   
   <p> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p>
     
