--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
 <link rel="stylesheet" href="theme.css">
-	
+
+<style>
+	    table {
+  width: 100%;
+  border-collapse: collapse;;
+}
+	</style>
    
 </head>
 
@@ -30,11 +36,17 @@
             <li><a href="/photography.html">Photography</a></li>
 		</ul>
 	</div>
-<img src="/images/IMG_7185_cover.JPG" style="float: left;">
-  
-  <img src="/images/profile_pic.png" style="float: right;">
-  
-  <p> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p>
+<table>
+  <tr>
+    <th><img src="/images/IMG_7185_cover.JPG"></th>
+    <th><img src="/images/profile_pic.png"></th>
+  </tr>
+  <tr>
+    <td>Peter</td>
+    <td><p> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></td>
+  </tr>
+
+</table>
     
     <footer>&copy; 2021 Sheila Shu-Laam Chan</footer>
     
