--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</div>
 <table>
   <tr>
-    <th><img src="/images/IMG_7185_cover.JPG"></th>
+    <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px"></th>
     <th><img src="/images/profile_pic.png"></th>
   </tr>
   <tr>
