--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <table>
   <tr>
     <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px"></th>
-    <th><img src="/images/profile_pic.png"></th>
+    <th><img src="/images/profile_pic.png" style="max-width: 500px"></th>
   </tr>
   <tr>
     <td>Peter</td>
