--- a/index.html
+++ b/index.html
@@ -39,12 +39,9 @@
 <table>
   <tr>
     <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px"></th>
-    <th><img src="/images/profile_pic.png" style="max-width: 300px"></th>
-  </tr>
-  <tr>
-    <td></td>
-    <td><p> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></td>
-  </tr>
+    <th><img src="/images/profile_pic.png" style="max-width: 250px">
+	  <p> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></th>
+	</tr>
 
 </table>
     
