--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <tr>
     <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px"></th>
     <th><img src="/images/profile_pic.png" style="max-width: 250px">
-	  <p> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></th>
+	  <p style="margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></th>
 	</tr>
 
 </table>
