--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <tr>
     <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px"></th>
     <th><img src="/images/profile_pic.png" style="max-width: 250px">
+	<h1> Sheila Chan </h1>
 	  <p style="margin-left: 35px; margin-right: 35px; text-align: center;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></th>
 	</tr>
 
