--- a/photography.html
+++ b/photography.html
@@ -35,7 +35,7 @@
     	color: #a0a0a0;
 		text-align: center;
         font-size: 15px;
-        padding-bottom: 10px;
+        padding: 10px;
         font-variant: small-caps;
         font-family: Raleway;
         font-weight: normal;}
@@ -93,18 +93,17 @@
 		color: #b4cce8 ;
         text-decoration: none;}
     
-    hr.separator {
+    hr.solid {
   		border: 0.25px solid #a0a0a0;}
+
+    table {
+ 	width: 100%;
+ 	border-collapse: collapse;}
     
     footer {
   		text-align:center;
-        color: #a0a0a0;
+        		color: #a0a0a0;
   		padding: 20px;}
-
-	table {
-  		width: 100%;
-  		border-collapse: collapse;}
-
 	</style>
 </head>
 
