--- a/photography.html
+++ b/photography.html
@@ -12,6 +12,8 @@
     <meta name="keywords" content="">
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
+<link rel="stylesheet" href="theme.css">
+<link rel="stylesheet" href="w3.css">
 	
     <style>
 	body {
@@ -102,9 +104,6 @@
   		text-align:center;
         		color: #a0a0a0;
   		padding: 20px;}
-
-.w3-responsive{display:block;overflow-x:auto}
-.w3-container:after,.w3-container:before,.w3-panel:after,.w3-panel:before,.w3-row:after,.w3-row:before,.w3-row-padding:after,.w3-row-padding:before,
 
 	</style>
 </head>
