--- a/photography.html
+++ b/photography.html
@@ -31,7 +31,7 @@
 		</ul>
 	</div>
     
-<div class="w3-row" id="myGrid" style="margin-bottom:128px">
+<div class="w3-row" id="myGrid" style="margin-left:30px;margin-right:30px;margin-bottom:128px">
   <div class="w3-third">
     <img src="/images/IMG_9530.JPG" style="width:100%">
     <img src="/images/IMG_1409.JPG" style="width:100%">
