--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
 <link rel="stylesheet" href="theme.css">
    
+	<style>
+@media (max-width: 600px) {
+  .column.side, .column.middle {
+    width: 100%;
+  }
+	
+</style>
+	
 </head>
 
 <body>
