--- a/index.html
+++ b/index.html
@@ -14,14 +14,6 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
 <link rel="stylesheet" href="theme.css">
    
-	<style>
-@media (max-width: 600px) {
-  .column.side, .column.middle {
-    width: 100%;
-  }
-	
-</style>
-	
 </head>
 
 <body>
@@ -38,16 +30,15 @@
             <li><a href="/photography.html">Photography</a></li>
 		</ul>
 	</div>
-<table>
-  <tr>
-    <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px"></th>
-    <th><img src="/images/profile_pic.png" style="max-width: 250px">
-	<h1> Sheila Chan </h1>
-	  <p style="margin-left: 35px; margin-right: 35px; text-align: center;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></th>
-	</tr>
 
-</table>
-    
+<div class="row">
+  <div class="column left"><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px"></div>
+  <div class="column right" style="background-color:#a0a0a0;"><img src="/images/profile_pic.png" style="max-width: 250px">
+	<h1> Sheila Chan </h1>
+	  <p style="margin-left: 35px; margin-right: 35px; text-align: center;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
+
+</div>
+
     <footer>&copy; 2021 Sheila Shu-Laam Chan</footer>
     
 </body>
