--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
 <div class="row">
   <div class="column left"><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px"></div>
-  <div class="column right" ><img src="/images/profile_pic.png" style="max-width: 250px, margin: auto;">
-	<p style="text-align: center;font-size: 50px;font-family: EB Garamond;
-        font-weight: 900;margin-bottom: 10px;"> Sheila Chan </p>
-	  <p style="margin-left: 35px; margin-right: 35px; text-align: center;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
+  <div class="column right" ><img src="/images/profile_pic.png" style="max-width: 250px">
+	<p style="font-size: 50px;font-family: EB Garamond;
+        font-weight: 900; margin-bottom: 10px;"> Sheila Chan </p>
+	  <p> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
 
 </div>
 
