--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 <table>
         <tr>
-            <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
-            </th>
-		<th></th>
+            <td><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
+            </td>
+	   <td></td>
         </tr>
         <tr>
             <td><img src="/images/profile_pic.png" style=" margin-left: auto;
