--- a/index.html
+++ b/index.html
@@ -38,15 +38,12 @@
             <td><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
             </td>
 <td><img src="/images/profile_pic.png" style=" margin-left: auto;
-  margin-right: auto;max-width: 250px"></td>
-	  
-        </tr>
-        <tr>
-            <td></td>
-            <td> <p style="font-size: 50px;font-family: EB Garamond;
+  margin-right: auto;max-width: 250px">
+
+<p style="font-size: 50px;font-family: EB Garamond;
         font-weight: 900;margin-bottom: 10px; text-align: center;"> Sheila Chan </p>
 	  <p style="text-align: center;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></td>
- 
+	  
         </tr>
 
 </table>
