--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <tr>
             <td><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
             </td>
-<td><img src="/images/profile_pic.png" style=" margin-left: auto;
+<td><img src="/images/profile_pic.png" style="margin-left: auto;
   margin-right: auto;max-width: 250px">
 
 <p style="font-size: 50px;font-family: EB Garamond;
-        font-weight: 900;margin-bottom: 10px; text-align: center;"> Sheila Chan </p>
-	  <p style="text-align: center;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></td>
+        font-weight: 900; text-align: center;"> Sheila Chan </p>
+	  <p style="text-align: center; padding: 10px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></td>
 	  
         </tr>
 
