--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   margin-right: auto;max-width: 250px">
 
 <p style="font-size: 50px;font-family: EB Garamond;
-        font-weight: 900; text-align: center;"> Sheila Chan </p>
-	  <p style="text-align: center; padding: 10px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></td>
+        font-weight: 900; text-align: center; padding-bottom: 10px;"> Sheila Chan </p>
+	  <p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></td>
 	  
         </tr>
 
