--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
 
 <table>
         <tr>
-            <td><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
-            </td>
-<td><img src="/images/profile_pic.png" style="margin-left: auto;
-  margin-right: auto;max-width: 250px">
+            <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
+            </th>
+<td\h><img src="/images/profile_pic.png" style="max-width: 250px">
 
 <p style="font-size: 50px;font-family: EB Garamond;
         font-weight: 900; text-align: center; padding-bottom: 10px;"> Sheila Chan </p>
-	  <p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></td>
+	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></th>
 	  
         </tr>
 
