--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <tr>
             <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
             </th>
-<td\h><img src="/images/profile_pic.png" style="max-width: 250px">
+<th><img src="/images/profile_pic.png" style="max-width: 250px">
 
 <p style="font-size: 50px;font-family: EB Garamond;
         font-weight: 900; text-align: center; padding-bottom: 10px;"> Sheila Chan </p>
