--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
 <body>
 
+<div class="header">
 	<h1>Sheila Chan</h1>
 <div class="rectangle"></div>
-    <h2>Reseach & Photography</h2>
+    <h2>Reseach & Photography</h2></div>
     
 <div class="nav">
     	<ul>
@@ -40,7 +41,7 @@
 <th><img src="/images/profile_pic.png" style="max-width: 250px">
 
 <p style="font-size: 50px;font-family: EB Garamond;
-        font-weight: 900; text-align: center; padding-bottom: 5px;"> Sheila Chan </p>
+        font-weight: 900; text-align: center; padding-bottom: 10px;"> Sheila Chan </p>
 	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></th>
 	  
         </tr>
