--- a/about_me.html
+++ b/about_me.html
@@ -44,8 +44,9 @@
 <p> Besides research, I also love photography. I mainly take photos of animals, both wild and captive. What I want to do is to raise people’s awareness of our relationship with animals and nature by showing people the beauty of nature. </p>
 
 <p> Feel free to contact me through email [sheila.chan(at)tufts.edu]. </p>
-    
-    <footer>&copy; 2021 Sheila Shu-Laam Chan</footer>
+
+<div class="footer">
+    <p>&copy; 2021 Sheila Shu-Laam Chan</p></div>
     
 </body>
 </html> 
