--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
 </table>
 
-
-    <footer>&copy; 2021 Sheila Shu-Laam Chan</footer>
+<div class="header">
+    <p>&copy; 2021 Sheila Shu-Laam Chan</p></div>
     
 </body>
 </html> 
