--- a/photography.html
+++ b/photography.html
@@ -49,8 +49,9 @@
     <img src="/images/IMG_2820.JPG" style="width:100%">
   </div>
 </div>
-    
-    <footer>&copy; 2021 Sheila Shu-Laam Chan</footer>
+
+<div class="footer">
+    <p>&copy; 2021 Sheila Shu-Laam Chan</p></div>
     
     <script>
     function myFunction() {
