--- a/research.html
+++ b/research.html
@@ -52,7 +52,8 @@
     
     <p> Handout [<a href="documents/UCLA-DP.pdf">PDF</a>] </p>
 
-    <footer>&copy; 2021 Sheila Shu-Laam Chan</footer>
+<div class="footer">
+    <p/>&copy; 2021 Sheila Shu-Laam Chan</p></div>
     
 </body>
 </html> 
