--- a/about_me.html
+++ b/about_me.html
@@ -46,7 +46,7 @@
 <p> Feel free to contact me through email [sheila.chan(at)tufts.edu]. </p>
 
 <div class="footer">
-    <p>&copy; 2021 Sheila Shu-Laam Chan</p></div>
+    <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
     
 </body>
 </html> 
