--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </table>
 
 <div class="header">
-    <p>&copy; 2021 Sheila Shu-Laam Chan</p></div>
+    <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
     
 </body>
 </html> 
