--- a/photography.html
+++ b/photography.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="footer">
-    <p>&copy; 2021 Sheila Shu-Laam Chan</p></div>
+    <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
     
     <script>
     function myFunction() {
