--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@
     <p> Handout [<a href="documents/UCLA-DP.pdf">PDF</a>] </p>
 
 <div class="footer">
-    <p/>&copy; 2021 Sheila Shu-Laam Chan</p></div>
+    <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</p></div>
     
 </body>
 </html> 
