--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
 <link rel="stylesheet" href="theme.css">
+<link rel="stylesheet" href="w3.css">
    
 </head>
 
@@ -33,7 +34,7 @@
 	</div>
 
 
-
+<div class="w3-container">
 <table>
         <tr>
             <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
@@ -46,10 +47,10 @@
 	  
         </tr>
 
-</table>
+</table></div>
 
-<div class="header">
-    <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
+<div class="footer">
+    <p>&copy; 2021 Sheila Shu-Laam Chan</p></div>
     
 </body>
 </html> 
