--- a/index.html
+++ b/index.html
@@ -35,22 +35,20 @@
 
 
 <div class="w3-container">
-<table>
-        <tr>
-            <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
-            </th>
-<th><img src="/images/profile_pic.png" style="max-width: 250px">
-
+<div class="w3-row w3-border">
+<div class="w3-container w3-half">
+<<img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
+            </div>
+<div class="w3-container w3-half">
+<img src="/images/profile_pic.png" style="max-width: 250px">
 <p style="font-size: 50px;font-family: EB Garamond;
         font-weight: 900; text-align: center; padding-bottom: 10px;"> Sheila Chan </p>
-	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></th>
+	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
 	  
-        </tr>
-
-</table></div>
+</div></div>
 
 <div class="footer">
-    <p>&copy; 2021 Sheila Shu-Laam Chan</p></div>
+    <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
     
 </body>
 </html> 
