--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
 
 
 <div class="w3-container">
-<div class="w3-row w3-border">
-<div class="w3-container w3-half">
-<img src="/images/IMG_7185_cover.JPG" style="max-width: 600px">
-            </div>
-<div class="w3-container w3-half">
-<img src="/images/profile_pic.png" style="text-align: center; max-width: 250px">
+<table>
+        <tr>
+            <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
+            </th>
+<th><img src="/images/profile_pic.png" style="max-width: 250px">
+
 <p style="font-size: 50px;font-family: EB Garamond;
         font-weight: 900; text-align: center; padding-bottom: 10px;"> Sheila Chan </p>
-	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
+	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></th>
 	  
-</div></div>
+        </tr>
+
+</table></div>
 
 <div class="footer">
     <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
