--- a/photography.html
+++ b/photography.html
@@ -31,7 +31,8 @@
             <li><a href="/photography.html">Photography</a></li>
 		</ul>
 	</div>
-    
+
+<div class="container">    
 <div class="w3-row" id="myGrid" style="margin-left:30px;margin-right:30px;margin-bottom:128px">
   <div class="w3-third">
     <img src="/images/IMG_9530.JPG" style="width:100%">
@@ -48,6 +49,7 @@
     <img src="/images/IMG_7185.JPG" style="width:100%">
     <img src="/images/IMG_2820.JPG" style="width:100%">
   </div>
+</div>
 </div>
 
 <div class="footer">
