--- a/about_me.html
+++ b/about_me.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
 <link rel="stylesheet" href="theme.css">
-<link rel="stylesheet" href="w3.css">
+
 
 </head>
 
@@ -32,8 +32,8 @@
             <li><a href="/photography.html">Photography</a></li>
 		</ul>
 	</div>
-    
-<div class="w3-container">
+
+<div class="container"> 
 <p> I am a first-year MS student in <a href="https://as.tufts.edu/biology/">Department of Biology</a> at <a href="https://www.tufts.edu/">Tufts University</a>. I received my MA in Linguistics and BA in Translation from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, and AA in Translation and Interpretation from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. </p>
 
 <p> My research interests in biology revolve around the fact that both other animals and we have to rely on communication to live together and perform various activities collectively. There are two main aspects that I am interested in: how animals communicate without language when they hunt, defend themselves, and mate, and how animals cooperate to utilize their collective power. </p>
@@ -47,7 +47,7 @@
 <p> Feel free to contact me through email [sheila.chan(at)tufts.edu]. </p></div>
 
 <div class="footer">
-    <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
+    <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2>
     
 </body>
 </html> 
