--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
 <link rel="stylesheet" href="theme.css">
-<link rel="stylesheet" href="w3.css">
-   
+
 </head>
 
 <body>
@@ -34,7 +33,7 @@
 	</div>
 
 
-<div class="w3-container">
+<div class="container">
 <table>
         <tr>
             <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
