--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 <div class="container">
-<table>
+<table class="table">
         <tr>
             <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
             </th>
