--- a/index.html
+++ b/index.html
@@ -33,20 +33,16 @@
 	</div>
 
 
-<div class="container">
-<table class="table">
-        <tr>
-            <th><img src="/images/IMG_7185_cover.JPG" style="max-width: 250px">
-            </th>
-<th><img src="/images/profile_pic.png" style="max-width: 250px">
+<div class="grid-container">
+<div><img src="/images/IMG_7185_cover.JPG" style="max-width: 250px">
+            </div>
+<div><img src="/images/profile_pic.png" style="max-width: 250px;text-align: center;">
 
 <p style="font-size: 50px;font-family: EB Garamond;
         font-weight: 900; text-align: center; padding-bottom: 10px;"> Sheila Chan </p>
-	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></th>
+	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
 	  
-        </tr>
-
-</table></div>
+</div>
 
 <div class="footer">
     <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
