--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="grid-container">
 <div><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
             </div>
-<div><img src="/images/profile_pic.png" style="max-width: 250px;text-align: center;">
+<div><img src="/images/profile_pic.png" style="max-width: 250px;text-align: center; padding-top: 20px;">
 
 <p style="font-size: 50px;font-family: EB Garamond;
         font-weight: 900; text-align: center; padding-bottom: 10px;"> Sheila Chan </p>
