--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 <div class="grid-container">
 <div><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
             </div>
-<div><img src="/images/profile_pic.png" style="max-width: 250px;text-align: center; padding-top: 20px;">
+<div><img src="/images/profile_pic.png" style="max-width: 250px;text-align: center; padding-top: 30px;">
 
 <p style="font-size: 50px;font-family: EB Garamond;
-        font-weight: 900; text-align: center; padding-top: 30px;"> Sheila Chan </p>
+        font-weight: 900; text-align: center; "> Sheila Chan </p>
 	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
 	  
 </div>
