--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</ul>
 	</div>
 
-
+<div class="grid">
 <div class="grid-container">
 <div><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
             </div>
@@ -42,7 +42,7 @@
         font-weight: 900; text-align: center; "> Sheila Chan </p>
 	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
 	  
-</div>
+</div></div>
 
 <div class="footer">
     <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
