--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div><img src="/images/profile_pic.png" style="max-width: 250px;text-align: center; padding-top: 30px;">
 
 <p style="font-size: 50px;font-family: EB Garamond;
-        font-weight: 900; text-align: center; "> Sheila Chan </p>
+        font-weight: 900; text-align: center; padding-bottom: 0px;"> Sheila Chan </p>
 	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
 	  
 </div></div>
