--- a/index.html
+++ b/index.html
@@ -32,17 +32,16 @@
 		</ul>
 	</div>
 
-<div class="grid">
-<div class="grid-container">
+<div class="grid-container" style="text-align: center;">
 <div><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
             </div>
 <div><img src="/images/profile_pic.png" style="max-width: 250px;text-align: center; padding-top: 30px;">
 
 <p style="font-size: 50px;font-family: EB Garamond;
         font-weight: 900; text-align: center; padding-bottom: 0px;"> Sheila Chan </p>
-	  <p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
+	  <p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
 	  
-</div></div>
+</div>
 
 <div class="footer">
     <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
