--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 		</ul>
 	</div>
 
-<div class="grid-container" style="text-align: center;">
+<div class="grid-container">
 <div><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
             </div>
-<div><img src="/images/profile_pic.png" style="max-width: 250px;text-align: center; padding-top: 30px;">
+<div><img src="/images/profile_pic.png" style="max-width: 250px;text-align: center; margin-top: 30px;">
 
 <p style="font-size: 50px;font-family: EB Garamond;
         font-weight: 900; text-align: center; padding-bottom: 0px;"> Sheila Chan </p>
