--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
 		</ul>
 	</div>
 
-<div class="grid-container">
-<div><img src="/images/IMG_7185_cover.JPG" style="max-width: 500px">
-            </div>
-<div><img src="/images/profile_pic.png" style="max-width: 250px;text-align: center; margin-top: 30px;">
-
+<div class="container">
+<img src="/images/IMG_7489.jpeg" style="width:100%;opacity: 0.25;">
+           
+<div class="centered">
+<img src="/images/profile_pic.png" style="max-width: 250px;text-align: center; margin-top: 30px;">
 <p style="font-size: 50px;font-family: EB Garamond;
         font-weight: 900; text-align: center; padding-bottom: 0px;"> Sheila Chan </p>
 	  <p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
-	  
+
 </div>
+
 
 <div class="footer">
     <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
