--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <img src="/images/IMG_7489.jpeg" style="width:100%;opacity: 0.25;">
            
 <div class="centered">
-<img src="/images/profile_pic.png" style="max-width: 250px;text-align: center; margin-top: 30px;">
+<img src="/images/profile_pic.png" style="max-width: 250px;width:50%; margin-top: 40px;">
 	  <p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
 
 </div>
