--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
 		</ul>
 	</div>
 
-<div class="container_cover">
-<img src="/images/IMG_7489.jpeg" style="width:100%;opacity: 0.25;">
-           
+<div class="hero-image">
 <div class="centered">
 <img src="/images/profile_pic.png" style="max-width: 250px;width:50%; padding-top: 20px;">
 	  <p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
