--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</div>
 
 <div class="hero-image">
-<div class="centered">
+<div class="hero-text">
 <img src="/images/profile_pic.png" style="max-width: 250px;width:50%; padding-top: 20px;">
 	  <p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
 
