--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <img src="/images/IMG_7489.jpeg" style="width:100%;opacity: 0.25;">
 <div class="centered">
 <img src="/images/profile_pic.png" style="max-width: 200px; width:50%; padding-top: 20px;">
-<p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
+<span class="float-right-sm"><p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></span></div>
 
 </div>
 
