--- a/photo_test.html
+++ b/photo_test.html
@@ -15,6 +15,13 @@
 <link rel="stylesheet" href="theme.css">
 
 <style>
+
+.container_gallery {
+ 	 margin: auto;
+ 	 max-width: 700px;
+ 	 width: 90%;
+ 	 text-align: center;}
+
 .column {
   float: left;
   width: 50%;
@@ -49,7 +56,7 @@
 		</ul>
 	</div>
 
-<div class="container"> 
+<div class="container_gallery"> 
 
 <div class="row"> 
   <div class="column">
