--- a/photo_test.html
+++ b/photo_test.html
@@ -72,6 +72,7 @@
   <img src="/images/IMG_2820.JPG" style="width:100%">
   </div>  
   </div>
+</div>
 
 <div class="footer">
     <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
