--- a/photography.html
+++ b/photography.html
@@ -13,8 +13,36 @@
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
 <link rel="stylesheet" href="theme.css">
-<link rel="stylesheet" href="w3.css">
-	
+
+<style>
+
+* {
+  box-sizing: border-box;
+}
+
+.container_gallery {
+ 	 margin: auto;
+ 	 max-width: 600px;
+ 	 width: 90%;
+ 	 text-align: center;}
+
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+}
+
+.column img {
+  margin-top: 12px;
+}
+
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+</style>
    </head>
 
 <body>
@@ -32,39 +60,26 @@
 		</ul>
 	</div>
 
-<div class="container">    
-<div class="w3-row" id="myGrid" style="margin-left:30px;margin-right:30px;margin-bottom:128px">
-  <div class="w3-third">
-    <img src="/images/IMG_9530.JPG" style="width:100%">
-    <img src="/images/IMG_1409.JPG" style="width:100%">
-    <img src="/images/IMG_8053.JPG" style="width:100%">
+<div class"container_gallery"
+<div class="row"> 
+  <div class="column">
+  <img src="/images/IMG_9530.JPG" style="width:100%">
+  <img src="/images/IMG_1409.JPG" style="width:100%">
+  <img src="/images/IMG_6995.JPG" style="width:100%">
+  <img src="/images/IMG_8053.JPG" style="width:100%">
   </div>
-
-  <div class="w3-third">
-    <img src="/images/IMG_6995.JPG" style="width:100%">
-    <img src="/images/IMG_6564.JPG" style="width:100%">
+  <div class="column">
+  <img src="/images/IMG_8521.JPG" style="width:100%">
+  <img src="/images/IMG_6564.JPG" style="width:100%">
+  <img src="/images/IMG_7185.JPG" style="width:100%">
+  <img src="/images/IMG_2820.JPG" style="width:100%">
+  </div>  
   </div>
-
-  <div class="w3-third">
-    <img src="/images/IMG_7185.JPG" style="width:100%">
-    <img src="/images/IMG_2820.JPG" style="width:100%">
-  </div>
-</div>
 </div>
 
 <div class="footer">
     <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2></div>
     
-    <script>
-    function myFunction() {
-  var x = document.getElementById("myGrid");
-  if (x.className === "w3-row") {
-    x.className = "w3-row-padding";
-  } else { 
-    x.className = x.className.replace("w3-row-padding", "w3-row");
-  }
-}
-</script>
     
 </body>
 </html> 
