--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com	/css?family=EB+Garamond|Raleway">
 <link rel="stylesheet" href="theme.css">
 
+<style>
+
+.float-right-sm {
+}
+
+@media (max-width: 600px) {
+  .float-right-sm {
+    float: right;
+  }
+}
+</style>
+
 </head>
 
 <body>
@@ -36,7 +48,7 @@
 <img src="/images/IMG_7489.jpeg" style="width:100%;opacity: 0.25;">
 <div class="centered">
 <img src="/images/profile_pic.png" style="max-width: 200px; width:50%; padding-top: 20px;">
-<p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></div>
+<span class="float-right-sm"><p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></span></div>
 
 </div>
 
