--- a/photography.html
+++ b/photography.html
@@ -43,8 +43,8 @@
 <div class="header">
 	<h1>Sheila Chan</h1>
 	<div class="rectangle"></div>
-	<h2>Reseach & Photography</h2><
-/div>
+	<h2>Reseach & Photography</h2>
+</div>
     
 <div class="nav">
 	<ul>
