--- a/index.html
+++ b/index.html
@@ -16,15 +16,10 @@
 
 <style>
 
-.float-right-sm {}
-
 .container_cover {
-  position: relative;
-  text-align: center;}
+	position: relative;
+	text-align: center;}
 
-@media (max-width: 600px) {
-  .float-right-sm {
-    float: right;}}
 </style>
 </head>
 
@@ -47,8 +42,8 @@
 <div class="container_cover">
 	<img src="/images/IMG_7489.jpeg" style="width:100%;opacity: 0.25;">
 	<div class="centered">
-		<img src="/images/profile_pic.png" style="max-width: 200px; width:50%; padding-top: 20px;">
-		<span class="float-right-sm"><p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p></span>
+		<img src="/images/profile_pic.png" style="max-width: 200px; width:50%; padding-top: 20px; float: left;">
+		<p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p>
 	</div>
 </div>
 
