--- a/photography.html
+++ b/photography.html
@@ -15,8 +15,6 @@
 	<link rel="stylesheet" href="theme.css">
 
 <style>
-* {
-  box-sizing: border-box;}
 
 .container_gallery {
  	 margin: auto;
@@ -27,7 +25,10 @@
 .column {
 	float: left;
 	width: 50%;
-	padding: 10px;}
+	padding: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+	box-sizing: border-box;}
 
 .column img {
 	margin-top: 12px;}
