--- a/photography.html
+++ b/photography.html
@@ -16,6 +16,9 @@
 
 <style>
 
+* {
+	box-sizing: border-box;}
+
 .container_gallery {
  	 margin: auto;
  	 max-width: 600px;
@@ -27,8 +30,7 @@
 	width: 50%;
 	padding: 10px;
 	margin-left: 10px;
-	margin-right: 10px;
-	box-sizing: border-box;}
+	margin-right: 10px;}
 
 .column img {
 	margin-top: 12px;}
