--- a/photography.html
+++ b/photography.html
@@ -20,17 +20,15 @@
 	box-sizing: border-box;}
 
 .container_gallery {
- 	 margin: auto;
- 	 max-width: 600px;
- 	 width: 90%;
- 	 text-align: center;}
+ 	margin: auto;
+ 	max-width: 600px;
+ 	width: 90%;
+ 	text-align: center;}
 
 .column {
 	float: left;
 	width: 50%;
-	padding: 10px;
-	margin-left: 10px;
-	margin-right: 10px;}
+	padding: 10px;}
 
 .column img {
 	margin-top: 12px;}
