--- a/about_me.html
+++ b/about_me.html
@@ -41,7 +41,7 @@
 
 	<p> You can find more about my academic path in my <a href="/documents/CV-Sheila Chan (2021).pdf">CV</a>. </p>
 
-	<p> Besides research, I also love photography. I mainly take photos of animals, both wild and captive. What I want to do is to raise people’s awareness of our relationship with animals and nature by showing people the beauty of nature. </p>
+	<p> Besides research, I also love photography. I mainly take photos of animals, both wild and captive. What I want to do is to raise people’s awareness of our relationship with animals and nature by showing people the beauty of nature. Some of my favorite shots are <a href="/photography.html">here</a>.</p>
 
 	<p> Feel free to contact me through email [sheila.chan(at)tufts.edu]. </p>
 </div>
