--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 .container_cover {
 	position: relative;
-	text-align: center;}
+	text-align: center;
+	vertical-align: middle;}
 
 </style>
 </head>
