--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
 .container_cover {
 	position: relative;
-	text-align: center;
-	vertical-align: middle;}
+	text-align: center;}
 
 </style>
 </head>
@@ -41,9 +40,9 @@
 </div>
 
 <div class="container_cover">
-	<img src="/images/IMG_7489.jpeg" style="width:100%;opacity: 0.25;" style="float: left;">
+	<img src="/images/IMG_7489.jpeg" style="width: 100%; opacity: 0.25;">
 	<div class="centered">
-		<img src="/images/profile_pic.png" style="max-width: 200px; width:50%; padding-top: 15px;">
+		<img src="/images/profile_pic.png" style="max-width: 200px; width: 50%; padding-top: 15px;">
 		<p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p>
 	</div>
 </div>
