--- a/photography.html
+++ b/photography.html
@@ -59,16 +59,16 @@
 <div class"container_gallery"
 <div class="row"> 
 	<div class="column">
-		<img src="/images/IMG_9530.JPG" style="width:100%">
-		<img src="/images/IMG_1409.JPG" style="width:100%">
+		<img src="/images/2B1A1052.JPG" style="width:100%">
 		<img src="/images/IMG_6995.JPG" style="width:100%">
-		<img src="/images/IMG_8053.JPG" style="width:100%">
+		<img src="/images/IMG_8010.JPG" style="width:100%">
+		<img src="/images/IMG_9458.JPG" style="width:100%">
 	</div>
   	<div class="column">
-  		<img src="/images/IMG_8521.JPG" style="width:100%">
-  		<img src="/images/IMG_6564.JPG" style="width:100%">
-		<img src="/images/IMG_7185.JPG" style="width:100%">
-		<img src="/images/IMG_2820.JPG" style="width:100%">
+  		<img src="/images/83102624.JPG" style="width:100%">
+  		<img src="/images/IMG_2820.JPG" style="width:100%">
+		<img src="/images/IMG_6564.JPG" style="width:100%">
+		<img src="/images/IMG_9530.JPG" style="width:100%">
 	</div>  
 </div>
 </div>
