--- a/photography.html
+++ b/photography.html
@@ -73,6 +73,8 @@
 </div>
 </div>
 
+<p>You can see more on my <a href="https://www.flickr.com/photos/biologynphotography/">Flickr</a>.</p>
+
 <div class="footer">
     <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2>
 </div>
