--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="container_cover">
-	<img src="/images/IMG_7489.jpeg" style="width: 100%; opacity: 0.25;">
+	<img src="/images/IMG_6349.JPG" style="width: 100%; opacity: 0.25;">
 	<div class="centered">
 		<img src="/images/profile_pic.png" style="max-width: 200px; width: 50%; padding-top: 15px;">
 		<p style="text-align: center; margin-left: 30px; margin-right: 30px;"> I am a researcher in Biology/Linguistics who happens to be an amateur photographer, or the other way round. </p>
