--- a/about_me.html
+++ b/about_me.html
@@ -33,7 +33,7 @@
 
 
 <div class="container"> 
-	<p> I am a first-year MS student in <a href="https://as.tufts.edu/biology/">Department of Biology</a> at <a href="https://www.tufts.edu/">Tufts University</a>. I received my MA in Linguistics and BA in Translation from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, and AA in Translation and Interpretation from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. </p>
+	<p> I am a second-year MS student in <a href="https://as.tufts.edu/biology/">Department of Biology</a> at <a href="https://www.tufts.edu/">Tufts University</a>. I received my MA in Linguistics and BA in Translation from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, and AA in Translation and Interpretation from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. </p>
 
 	<p> My research interests in biology revolve around the fact that both other animals and we have to rely on communication to live together and perform various activities collectively. There are two main aspects that I am interested in: how animals communicate without language when they hunt, defend themselves, and mate, and how animals cooperate to utilize their collective power. </p>
 
