--- a/about_me.html
+++ b/about_me.html
@@ -33,9 +33,9 @@
 
 
 <div class="container"> 
-	<p> I am a second-year MS student in <a href="https://as.tufts.edu/biology/">Department of Biology</a> at <a href="https://www.tufts.edu/">Tufts University</a>. I received my MA in Linguistics and BA in Translation from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, and AA in Translation and Interpretation from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. </p>
+	<p> I am a research assistant in <a href="https://benoitguenard.wordpress.com">Dr. Benoit Guénard</a>'s lab in the School of Biological Sciences at the University of Hong Kong. I received my MS in Biology at Tufts University under the supervision of <a href="https://as.tufts.edu/biology/people/faculty/philip-starks">Dr. Philip Starks</a>. Before studying Biology, I obtained my MA in Linguistics and BA in Translation from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, and AA in Translation and Interpretation from <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>. </p>
 
-	<p> My research interests in biology revolve around the fact that both other animals and we have to rely on communication to live together and perform various activities collectively. There are two main aspects that I am interested in: how animals communicate without language when they hunt, defend themselves, and mate, and how animals cooperate to utilize their collective power. </p>
+	<p> My research interests in biology revolve around the fact that both other animals and we have to rely on communication to live together and perform various activities collectively. There are two main aspects that I am interested in: how animals communicate without "language" when they hunt, defend themselves, and mate, and how animals cooperate to utilize their collective power. </p>
 
 	<p> My research in linguistics focuses on syntax and morphology. I started out by looking at separable verbs in Cantonese. Together with my collaborators, we expand the study to other discontinuous predicates. </p>
 
@@ -43,11 +43,11 @@
 
 	<p> Besides research, I also love photography. I mainly take photos of animals, both wild and captive. What I want to do is to raise people’s awareness of our relationship with animals and nature by showing people the beauty of nature. Some of my favorite shots are <a href="/photography.html">here</a>.</p>
 
-	<p> Feel free to contact me through email [sheila.chan(at)tufts.edu]. </p>
+	<p> Feel free to contact me through email [sl7115(at)hku.hk]. </p>
 </div>
 
 <div class="footer">
-    <h2 style="font-family: EB Garamond">&copy; 2021 Sheila Shu-Laam Chan</h2>
+    <h2 style="font-family: EB Garamond">&copy; 2023 Sheila Shu-Laam Chan</h2>
 </div>
 
 </body>
