--- a/about_me.html
+++ b/about_me.html
@@ -33,13 +33,13 @@
 
 
 <div class="container"> 
-	<p> I am a 1st-year PhD student in <a href="https://www.thebatsandthebees.com/">Dr. Claire Hemingway</a>'s lab in the <a href="https://eeb.utk.edu/">Department of Ecology & Evolutionary Biology</a> at the University of Tennessee, Knoxville. I received my MS in Biology at Tufts University under the supervision of <a href="https://as.tufts.edu/biology/people/faculty/philip-starks">Dr. Philip Starks</a>. Before studying Biology, I obtained my MA in Linguistics and BA in Translation from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>. </p>
+	<p> I am a 1st-year PhD student in <a href="https://www.thebatsandthebees.com/">Dr. Claire Hemingway</a>'s lab in the <a href="https://eeb.utk.edu/">Department of Ecology & Evolutionary Biology</a> at the University of Tennessee, Knoxville. I received my MS in Biology at Tufts University under the supervision of <a href="https://as.tufts.edu/biology/people/faculty/philip-starks">Dr. Philip Starks</a>. Before studying Biology, I obtained my MA in Linguistics and BA in Translation from The Chinese University of Hong Kong. </p>
 
-	<p> My research interests in biology revolve around three Cs: Communication, Cooperation, and Collective behavior. I have been working with social insects, like acorn ants and bumblebees. I am particularly interested in studying the effect of individuals on collective behaviors and the interactions between individuals and colonies. </p>
+	<p> My research interests in biology revolve around three <b>C</b>s: <b>C</b>ommunication, <b>C</b>ooperation, and <b>C</b>ollective behavior. I have been working with social insects, like acorn ants and bumblebees. I am particularly interested in studying the effect of individuals on collective behaviors and the interactions between individuals and colonies. </p>
 
 	<p> My research in linguistics focuses on syntax and morphology. I started out by looking at separable verbs in Cantonese. Together with my collaborators, we expand the study to other discontinuous predicates. </p>
 
-	<p> You can find more about my academic path in my <a href="/documents/CV-2023 (Sheila Chan).pdf">CV</a>. </p>
+	<p> You can find more about my academic path in my <a href="/documents/CV-2024 (Sheila Chan).pdf">CV</a>. </p>
 
 	<p> Besides research, I also love photography. I mainly take photos of animals, both wild and captive. What I want to do is to raise people’s awareness of our relationship with animals and nature by showing people the beauty of nature. Some of my favorite shots are <a href="/photography.html">here</a>. </p>
 
