--- a/research.html
+++ b/research.html
@@ -39,10 +39,10 @@
   	<h4>Collective behavior</h4>
 	<p>During my time at Tufts, I conducted an independent research project on acorn ants <i>Temnothorax curvispinosus</i>. I investigated how differences between available nests affect their decision making in nest site selection by using pair-wise trials on colonies. I found that increasing differences in the number of attributes (e.g., brightness and width of entrances) between available nests affected the accuracy, but not latency, of decision making in acorn ant colonies. The result suggests that there could be a speed-accuracy trade-off in the collective decision-making process in ant colonies. During the experiment, I noticed that both colonies and individual ants seemed to have behavioral syndromes: some were more active, while some barely moved. This observation sparked my interest in the relationship between individuals and the colony or social group.</p>
 	
-	<h4>Cooperative behavior</h4>
+	<h4>Cooperation</h4>
 	<p> Manakins are known by their cooperative mating dance. The alpha male calls a beta male (sometimes more than one) to join him and they will dance together in the lek. An interesting part of the “ritual” would be how the males coordinate with each other during the dance. </p>
 	
-	<h4>Animal communication</h4>
+	<h4>Communication</h4>
 	<p> As my research in linguistics focused on the structure of language, I would like to explore similar issues in animals. Pigeons can discriminate complex images and remember sequential information. I wonder how the complexity of sequences and their cognitive capacity would affect their pattern learning experience. </p>
 <hr class="solid">
     
