--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@
 	<p> <b>Sheila S.L. Chan</b>, Lawrence Y.L. Cheung (2020). Morpho-Syntax of Non-VO Separable Compound Verbs in Cantonese. <i>Studies in Chinese Linguistics</i> 41(2). [<a href="documents/Morpho-Syntax of Non-VO Separable Compound Verbs in Cantonese.pdf">PDF</a>] </p>
     
 	<h4>Discontinuous predicates (With <a href="https://tszminglee.github.io/">Tommy Tsz-Ming Lee</a> and <a href="https://kafai-yip.github.io/">Ka-Fai Yip</a>)</h4>
-<p> Handout [<a href="documents/UCLA-DP.pdf">PDF</a>] </p>
+	<p> <b>Sheila S.L. Chan</b>, Tommy T.M. Lee & Ka-Fai Yip (2022). Discontinuous predicates in Cantonese as partial deletion. <i>University of Pennsylvania Working Papers in Linguistics</i>, 28(1). [<a href="documents/Discontinuous Predicates as Partial Deletion in Cantonese.pdf">PDF</a>]</p>
 </div>
 
 <div class="footer">
