--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<img src="/images/IMG_6349.JPG" style="width: 100%; opacity: 0.25;">
 	<div class="centered">
 		<img src="/images/profile_pic.png" style="max-width: 200px; width: 50%; padding-top: 15px;">
-		<p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Biology and Linguistics who happens to be an amateur photographer, or the other way round. </p>
+		<p style="text-align: center; margin-left: 20px; margin-right: 20px;"> I am a researcher in Ecology and Linguistics who happens to be an amateur photographer, or the other way round. </p>
 	</div>
 </div>
 
