--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
 
   
 <div class="container">  
-	<h3>Biology</h3>
+	<h3>Ecology</h3>
 	
   	<h4>Collective behavior</h4>
 	<p>During my time at Tufts, I conducted an independent research project on acorn ants <i>Temnothorax curvispinosus</i>. I investigated how differences between available nests affect their decision making in nest site selection by using pair-wise trials on colonies. I found that increasing differences in the number of attributes (e.g., brightness and width of entrances) between available nests affected the accuracy, but not latency, of decision making in acorn ant colonies. The result suggests that there could be a speed-accuracy trade-off in the collective decision-making process in ant colonies. During the experiment, I noticed that both colonies and individual ants seemed to have behavioral syndromes: some were more active, while some barely moved. This observation sparked my interest in the relationship between individuals and the colony or social group.</p>
