--- a/about_me.html
+++ b/about_me.html
@@ -39,7 +39,7 @@
 
 	<p> My research in linguistics focuses on syntax and morphology. I started out by looking at separable verbs in Cantonese. Together with my collaborators, we expand the study to other discontinuous predicates. </p>
 
-	<p> You can find more about my academic path in my <a href="/documents/CV-2024 (Sheila Chan).pdf">CV</a>. </p>
+	<p> You can find more about my academic path in my <a href="/documents/CV-2024 (Sheila Chan).pdf">CV</a> and research activities on my <a href="https://www.instagram.com/sheila3cology/">Instagram</a> and <a href="https://x.com/sheila3cology">Twitter/X</a>. </p>
 
 	<p> Besides research, I also love photography. I mainly take photos of animals, both wild and captive. What I want to do is to raise people’s awareness of our relationship with animals and nature by showing people the beauty of nature. Some of my favorite shots are <a href="/photography.html">here</a>. </p>
 
